--- a/index.mdx
+++ b/index.mdx
@@ -1,6 +1,6 @@
 ---
-title: Introduction
-description: "Welcome to the home of your new documentation"
+title: "Game Verse"
+description: "A detailed documentation about a game store platform"
 ---
 
 <img
@@ -8,30 +8,33 @@ description: "Welcome to the home of your new documentation"
   src="/images/hero-light.png"
   alt="Hero Light"
 />
+
 <img
   className="hidden dark:block"
-  src="/images/hero-dark.png"
+  src="/images/hades.avif"
   alt="Hero Dark"
+  title={true}
 />
 
-## Setting up
+## Features
 
-The first step to world-class documentation is setting up your editing environments.
+This API contains the following functionality
 
 <CardGroup cols={2}>
-  <Card
-    title="Edit Your Docs"
-    icon="pen-to-square"
-    href="https://mintlify.com/docs/quickstart"
-  >
-    Get your docs set up locally for easy development
+  <Card title="Register Studios" icon="pen-to-square" href="https://mintlify.com/docs/quickstart">
+    Studios are the user accounts that can create and manage games along with details related to those games like leaderboards and achievements.
   </Card>
-  <Card
-    title="Preview Changes"
-    icon="image"
-    href="https://mintlify.com/docs/development"
-  >
-    Preview your changes before you push to make sure they're perfect
+  <Card title="Enter as Players" icon="image" href="https://mintlify.com/docs/development">
+    Players are the user accounts that can interact with the studio products and manage communities with matches.
+  </Card>
+  <Card title="Get Achievements" icon="sparkles">
+    A detail about the games that is awarded upon completion of a specific task.
+  </Card>
+  <Card title="Participate in Matches" icon="sparkles">
+    An online competition to face other players.
+  </Card>
+  <Card title="Show Glory on Leaderboards" icon="sparkles">
+    Place where the information about matches of general in-game progress is shown.
   </Card>
 </CardGroup>
 
@@ -40,32 +43,16 @@ The first step to world-class documentation is setting up your editing environme
 Update your docs to your brand and add valuable content for the best user conversion.
 
 <CardGroup cols={2}>
-  <Card
-    title="Customize Style"
-    icon="palette"
-    href="https://mintlify.com/docs/settings/global"
-  >
+  <Card title="Customize Style" icon="palette" href="https://mintlify.com/docs/settings/global">
     Customize your docs to your company's colors and brands
   </Card>
-  <Card
-    title="Reference APIs"
-    icon="code"
-    href="https://mintlify.com/docs/api-playground/openapi"
-  >
+  <Card title="Reference APIs" icon="code" href="https://mintlify.com/docs/api-playground/openapi">
     Automatically generate endpoints from an OpenAPI spec
   </Card>
-  <Card
-    title="Add Components"
-    icon="screwdriver-wrench"
-    href="https://mintlify.com/docs/content/components/accordions"
-  >
+  <Card title="Add Components" icon="screwdriver-wrench" href="https://mintlify.com/docs/content/components/accordions">
     Build interactive features and designs to guide your users
   </Card>
-  <Card
-    title="Get Inspiration"
-    icon="stars"
-    href="https://mintlify.com/customers"
-  >
+  <Card title="Get Inspiration" icon="stars" href="https://mintlify.com/customers">
     Check out our showcase of our favorite documentation
   </Card>
 </CardGroup>
