Documentation edits made through Mintlify web editor

--- a/development.mdx
+++ b/development.mdx
@@ -7,10 +7,10 @@ description: "Below is basically the how every object will relate to each other"
   The Graph depicts what object was the origin of the previous object (Mostly depicts creation). Those without an origin mean they can be created without one
 </Card>
 
-<Card title="Relations" img="/images/origins.png">
+<Card title="Relations" img="/images/relations.png">
   The below depicts what relations each object will have with eachother
 </Card>
 
-<Card title="Endpoint Paths" img="/images/origins.png">
+<Card title="Endpoint Paths" img="/images/paths.png">
   The below depicts how the endpoint paths are structured. This Decision was made based on how each object was related to eachother and how the product will be used by the consumer
 </Card>
