Documentation edits made through Mintlify web editor

--- a/index.mdx
+++ b/index.mdx
@@ -21,19 +21,22 @@ description: "A detailed documentation about a game store platform"
 This API contains the following functionality
 
 <CardGroup cols={2}>
-  <Card title="Register Studios" icon="pen-to-square" href="https://mintlify.com/docs/quickstart">
+  <Card title="Register Studios" icon="pen-to-square" href="https://dachis-game-verse.mintlify.app/api-reference/endpoint/studio/list-studios">
     Studios are the user accounts that can create and manage games along with details related to those games like leaderboards and achievements.
   </Card>
-  <Card title="Enter as Players" icon="image" href="https://mintlify.com/docs/development">
+  <Card title="Enter as Players" icon="person" href="https://dachis-game-verse.mintlify.app/api-reference/endpoint/players/list-players">
     Players are the user accounts that can interact with the studio products and manage communities with matches.
   </Card>
-  <Card title="Get Achievements" icon="sparkles">
+  <Card title="Get Achievements" icon="trophy" href="https://dachis-game-verse.mintlify.app/api-reference/endpoint/achievements/list-achievements">
     A detail about the games that is awarded upon completion of a specific task.
   </Card>
-  <Card title="Participate in Matches" icon="sparkles">
+  <Card title="Participate in Matches" icon="sparkles" href="https://dachis-game-verse.mintlify.app/api-reference/endpoint/matches/list-matches">
     An online competition to face other players.
   </Card>
-  <Card title="Show Glory on Leaderboards" icon="sparkles">
+  <Card title="Show Glory on Leaderboards" icon="chess-board" href="https://dachis-game-verse.mintlify.app/api-reference/endpoint/leaderboards/list-leaderboards">
     Place where the information about matches of general in-game progress is shown.
+  </Card>
+  <Card title="Play some Games" icon="gamepad" iconType="regular" href="https://dachis-game-verse.mintlify.app/api-reference/endpoint/games/list-games">
+    The primary product for the platform.
   </Card>
 </CardGroup>
